Add new recipes sites and include in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken-enchilada.html">Chicken Enchilada</a>
-    
+    <ul>
+        <li><a href="recipes/chicken-enchilada.html">Chicken Enchilada</a></li>
+        <li><a href="recipes/mac-n-cheese.html">Mac n' Cheese</a></li>
+        <li><a href="recipes/broccoli-bowl.html">Broccoli Bowl</a></li>
+    </ul>
 </body>
 </html>
