Add style.css file

--- a/recipes/broccoli-bowl.html
+++ b/recipes/broccoli-bowl.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Broccoli Bowl</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <h1>Broccoli Bowl</h1>
@@ -29,5 +30,6 @@
             <li>Heat remaining 1 tablespoon oil in the wok.</li>
             <li> Add ginger juice mixture and broccoli. Cook and stir until heated through, about 2 minutes.</li>
         </ol>
+        <a href="/index.html">back home</a>
 </body>
 </html>
