--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="header">Odin Recipes</h1>
+    <h1>The place to get your best recipes</h1>
     <ul>
-        <li><a href="recipes/chicken-enchilada.html">Chicken Enchilada</a></li>
-        <li><a href="recipes/mac-n-cheese.html">Mac n' Cheese</a></li>
-        <li><a href="recipes/broccoli-bowl.html">Broccoli Bowl</a></li>
+        <li class="first-item"><a href="recipes/chicken-enchilada.html">Chicken Enchilada</a></li>
+        <li class="second-item"><a href="recipes/mac-n-cheese.html">Mac n' Cheese</a></li>
+        <li class="third-item"><a href="recipes/broccoli-bowl.html">Broccoli Bowl</a></li>
     </ul>
+    <p>This is a test paragraph</p>
 </body>
 </html>
