Connect pages via links and add styling to all pages

--- a/recipes/chicken-enchilada.html
+++ b/recipes/chicken-enchilada.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken enchilada</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Chicken Enchilada</h1>
-    <img src="/images/Chicken-Enchiladas-739fd129b4f3439293859ba87f263162.webp" alt="Chicken Enchilada Dish"> 
+    <img src="../images/Chicken-Enchiladas-739fd129b4f3439293859ba87f263162.webp" alt="Chicken Enchilada Dish"> 
     <h3> This chicken enchilada recipe is easy to make with tortillas, tender chicken, and a deliciously cheesy sauce for a family-pleasing Mexican meal. </h3>
 
     <p>This chicken enchilada recipe couldn’t be easier to make with simple ingredients. </p>
@@ -29,6 +29,11 @@
             <li>Melt the cheese. Stir in tomato sauce, green pepper, garlic, chili powder, and salt.</li>
             <li>Fill the enchiladas and roll them up. Arrange them in a baking dish. </li>
             <li>Top with taco sauce and remaining cheese. Bake until the cheese is melted.</li>
-        </ol>
+        </ol><br>
+
+        <p>Other Recipes</p>
+        <a href="../recipes/broccoli-bowl.html">Broccoli Bowl</a><br>
+        <a href="../recipes/mac-n-cheese.html">Mac n' Cheese</a><br>
+        <a href="../index.html">back home</a>
 </body>
 </html>
