--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mac n' Cheese</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Mac n' Cheese</h1>
-    <img src="/images/macncheese.webp" alt="Mac n' Cheese Dish"> 
+    <img src="../images/macncheese.webp" alt="Mac n' Cheese Dish"> 
     <h3>This is a completely unpretentious, down-home macaroni and cheese recipe just like grandma and mom always made.</h3>
 
     <p>This Mac n' Cheese recipe couldn’t be easier to make with simple ingredients. </p>
@@ -29,6 +29,11 @@
             <li>Melt butter in a large pot over medium-low heat. Slowly add flour to butter, whisking constantly.</li>
             <li>Stir drained macaroni into the cheese sauce to coat.</li>
             <li>Bake in preheated oven until the crust is golden brown and the sauce is bubbling, 35 to 45 minutes.</li>
-        </ol>
+        </ol><br>
+
+        <p>Other Recipes</p>
+        <a href="../recipes/chicken-enchilada.html">Chicken Enchilada</a><br>
+        <a href="../recipes/broccoli-bowl.html">Broccoli Bowl</a><br>
+        <a href="../index.html">back home</a>
 </body>
 </html>
