--- a/recipes/broccoli-bowl.html
+++ b/recipes/broccoli-bowl.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Broccoli Bowl</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Broccoli Bowl</h1>
-    <img src="/images/Broccolli Bowl.webp" alt="Broccoli Bowl Dish"> 
+    <img src="../images/Broccolli Bowl.webp" alt="Broccoli Bowl Dish"> 
     <h3> Tender beef slices and crunchy Chinese broccoli or kale are stir-fried in a savory ginger sauce. Easy to make, pretty healthy, and everybody loves it!</h3>
 
     <p>This broccoli bowl recipe couldn’t be easier to make with simple ingredients. </p>
@@ -29,7 +29,11 @@
             <li>Heat 1 tablespoon oil in a wok over medium-high heat; cook and stir ginger until fragrant, about 30 seconds. Add broccoli; cook and stir for 2 minutes.</li>
             <li>Heat remaining 1 tablespoon oil in the wok.</li>
             <li> Add ginger juice mixture and broccoli. Cook and stir until heated through, about 2 minutes.</li>
-        </ol>
-        <a href="/index.html">back home</a>
+        </ol><br>
+
+        <p>Other Recipes</p>
+        <a href="../recipes/chicken-enchilada.html">Chicken Enchilada</a><br>
+        <a href="../recipes/mac-n-cheese.html">Mac n' Cheese</a><br>
+        <a href="../index.html">back home</a>
 </body>
 </html>
